--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,19 @@ h1 {
   color: #fff;
 }
 
+h2 {
+  margin: 30px;
+  font-family: 'Lobster', cursive;
+  text-shadow: 5px 0 #232931;
+  font-size: 4rem;
+  color: #fff;
+}
+
+h3 {
+  text-transform: capitalize;
+  color: #fff;
+}
+
 p {
   font-size: 2rem;
   color: #fff;
